Changed BasePath and host in swagger
