# hw04-helm/docs/swagger.json
@@ -19,55 +19,9 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "basePath": "/",
     "paths": {
-        "/health": {
-            "get": {
-                "description": "Отвеает, жив ли контейнер",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Service state"
-                ],
-                "summary": "Проверка состояния",
-                "responses": {
-                    "200": {
-                        "description": "Сервис жив"
-                    },
-                    "500": {
-                        "description": "Ошибка сервера"
-                    }
-                }
-            }
-        },
-        "/ready": {
-            "get": {
-                "description": "Отвечает, готов ли контейнер принимать трафик",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Service state"
-                ],
-                "summary": "Проверка готовности к работе",
-                "responses": {
-                    "200": {
-                        "description": "Сервис готов к работе"
-                    },
-                    "500": {
-                        "description": "Ошибка сервера"
-                    }
-                }
-            }
-        },
-        "/users": {
+        "/api/v1/users": {
             "post": {
                 "description": "Создает нового пользователя в системе",
                 "consumes": [
@@ -113,7 +67,7 @@
                 }
             }
         },
-        "/users/{id}": {
+        "/api/v1/users/{id}": {
             "get": {
                 "description": "Возвращает информацию о пользователе по его идентификатору",
                 "produces": [
@@ -246,6 +200,52 @@
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
+                    }
+                }
+            }
+        },
+        "/health": {
+            "get": {
+                "description": "Отвеает, жив ли контейнер",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Service state"
+                ],
+                "summary": "Проверка состояния",
+                "responses": {
+                    "200": {
+                        "description": "Сервис жив"
+                    },
+                    "500": {
+                        "description": "Ошибка сервера"
+                    }
+                }
+            }
+        },
+        "/ready": {
+            "get": {
+                "description": "Отвечает, готов ли контейнер принимать трафик",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Service state"
+                ],
+                "summary": "Проверка готовности к работе",
+                "responses": {
+                    "200": {
+                        "description": "Сервис готов к работе"
+                    },
+                    "500": {
+                        "description": "Ошибка сервера"
                     }
                 }
             }
